Feed more variables

--- a/data/global.yml
+++ b/data/global.yml
@@ -1,14 +1,44 @@
 site_url: http://your-website.com
 
-name: 
-  - Goku
+name:
   - Caê
   - Carlos Eduardo
+  - ?
 title:
-  - Ciclista
+  - designer
+  - projetista
+  - codificador
+  - ativista
+  - hacker
+  - hipster
+  - tilelê
+  - artista
+  - micreiro
+  - ciclista
+  - humano
 description:
+  - brasileiro
+  - web
+  - antifascista
+  - esquerdista
+  - fixeiro
+  - moderno
   - firmeza
+  - 2.0
 function:
+  - que trabalha na área de
+  - com anos de experiência em
   - que finge que entende de
+  - que finge que gosta de
+  - que anda estudando
+  - com vontade de aprender mais sobre
+  - que nunca ouviu falar em
 area:
-  - marxismo
+  - experiência do usuário
+  - design centrado no usuário
+  - metodologias não-ágeis
+  - bicicletas
+  - frameworks javascript ultrapassados
+  - revoluções anarcossocialistas
+  - futurismo
+  - materialismo histórico e dialético
